# rrfs_utl

./: README  build.utils
baselib/: CMakeLists.txt
update_gvf.fd/: update_GVF.f90
use_raphrrr_sfc.fd/: CMakeLists.txt  module_surface.f90  use_raphrrr_sfc.f90  use_raphrrr_sfc.namelist
use_raphrrr_sfc.fd/baselib/: kinds.f90
